# App_Dev_sem_1

./: .gitignore  README.md  ЛР6.docx
lab2/: .env  .pre-commit-config.yaml  :memory:?cache=shared  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  producer.py  pyproject.toml  pyrightconfig.json  rabbitmq_worker.py
lab2/app/: alembic.ini  database.py  dependencies.py  exceptions.py  models.py  push_data.py  push_products_orders.py  queries.py  rabbitmq_consumer.py  redis_client.py
lab2/app/cache/: __init__.py  user_cache.py
lab2/app/controllers/: __init__.py  order_controller.py  product_controller.py  user_controller.py
lab2/app/migrations/: env.py
lab2/app/migrations/versions/: 0f5e27cc08e3_.py  8174c1fe5a08_change_user_id_from_uuid_to_int.py  9e6b96ed2170_change_uuid_to_int_for_all_models.py  b49dcc308579_create_product_order_add_new_fields_and_.py  eeb0a18a7fdf_refactor_order_to_support_multiple_.py  fc13228c3897_initial_migration_create_users_and_.py
lab2/app/repositories/: __init__.py  order_repository.py  product_repository.py  user_repository.py
lab2/app/schemas/: __init__.py  order_schema.py  product_schema.py  report_schema.py  user_schema.py
lab2/app/services/: __init__.py  order_service.py  product_service.py  report_service.py  user_service.py
lab2/tests/: conftest.py
lab2/tests/test_controllers/: __init__.py  test_order_controller.py  test_product_controller.py  test_report_controller.py  test_user_controller.py
lab2/tests/test_repositories/: test_order_repository.py  test_product_repository.py  test_report_repository.py  test_user_repository.py
lab2/tests/test_services/: test_order_service.py  test_product_service.py  test_report_service.py  test_user_service.py
(+47 files in other folders)
